# hyper-render

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
.github/workflows/: benchmark.yml  ci.yml
benches/: render.rs
benches/fixtures/: large.html  medium.html
examples/: from_file.rs  simple.rs
src/: config.rs  error.rs  lib.rs
src/render/: mod.rs  pdf.rs  png.rs
tests/: config.rs  error_handling.rs  pdf_text_snapshots.rs  render_pdf.rs  render_png.rs
tests/snapshots/: empty_elements.txt  headings.txt  inline_elements.txt  list_items.txt  mixed_content.txt  multiline_content.txt  multiple_paragraphs.txt  nested_elements.txt  ordered_list.txt  receipt_like_document.txt  special_characters.txt  styled_text.txt  table_content.txt  whitespace_handling.txt
